--- a/devices/b150m/sway/.config/waybar/style.css
+++ b/devices/b150m/sway/.config/waybar/style.css
@@ -1,7 +1,8 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: FontAwesome, pango, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 13px;
+    /* font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif; */
+    font-family: FontAwesome, sans-serif;
+    font-size: 15px;
 }
 
 window#waybar {
